RC 4
====

- Applied patch by Adam Mills fixing IOC-39
  "Fix for Null Reference when accessing empty BinaryTreeComponentName"

- Fixed IOC-35 
  "Add bootstrap section to configuration file"

- Fixed issue where KeyAlreadyAdded exception would be throw for 
  components accepting two parameters of the same type, without overrides

- Fixed IOC-36 
  "Transient components with multliple constructors throw 
   unresolved dependency exceptions."

  Removed best candidate reference, as the kernel is dynamic it should
  not cache best constructors as components can be added or removed
  at any time
  
  Removed Points from candidates, as in a multithreaded scenario
  this would lead to failures
  

- Fixed IOC-34 
  "Cannot use types having their own base type as constructor argument"

  See revision r2787

- IOC-32, Support generic collections. 
  Supported collections are: ICollection<T>, IList<T>, List<T>, IDictionary<K,V>, Dictionary<K,V>, IEnumerable<T> 

RC 3
====
 
- Applied patch by William C. Pierce <wcpierce@gmail.com> adding PerWebRequestAttribute

- Added setter to ReleasePolicy property

- Applied Curtis Schlak's patch fixing IOC-30
  "Add overload to Windsor AddComponent to specify the Lifestyle"

- Refactored AbstractHandler to use IDependencyResolver

- Dependencies can be resolved now in three levels:

  * CreationContext (which now implements ISubDependencyResolver)
  * IHandler (which now implements ISubDependencyResolver)
  * IKernel which is the normal flow

- Implemented IoC-29 using a different approach

- Renamed IKernel.AddComponentWithProperties to AddComponentWithExtendedProperties.
  The old method name misled the programmer about its purpose.

- Added a PerWebRequestLifestyleManager which creates at most one instance of
  an object per web request.  To use it you must add the following http module

  <httpModules>
      ...